fix artifacts, add sbt run configuration